--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,20 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.main.banner-mode=off
+
+
+#enable /actuator/info
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+
+management.endpoint.health.show-details=always
+
+
+#custom properties
+info.app.name=order-service
+info.app.version=1.0.0
+info.app.description=you can insert any kind of data in the property file like this
+
+info.compnay.name=Mohanned Albidani
